@@ -29,6 +29,10 @@ Changes Since 0.12
   - Patch [ 120 ] tables accept option widths: list of relative widths, 'auto'
     or 'grid'.
 
+* docutils/parsers/rst/roles.py
+
+  - Fix [ 295 ] Class argument for custom role inheriting from math.
+
 * docutils/parsers/rst/tableparser.py
 
   - Really fix [ 159 ] Spurious table column alignment errors.
